# sc-claude-code-files

./: .gitignore  CLAUDE.md
lesson7_files/: CLAUDE.md  EDA_Refactored.ipynb  README.md  README_TESTING.md  README_dashboard.md  business_metrics.py  dashboard.py  data_loader.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
lesson7_files/tests/: conftest.py  test_dashboard_core.py  test_dashboard_interactions.py  test_dashboard_visual.py
